# Platformer3D-Engine

./: .eslintrc  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  LICENSE.md  NOTICE.md  README.md  asconfig.client.json  asconfig.common.json  asconfig.server.json  asconfig.singleplayer.json  forge.config.cjs  index.html  index.test.ts  package-lock.json  package.json  playwright.config.ts  qodana.yaml  rollup.config.js  svelte.config.js  tauri.conf.json  tsconfig.client.json  tsconfig.common.json  tsconfig.dts.json  tsconfig.json  tsconfig.math.json  tsconfig.server.json  tsconfig.singleplayer.json  vite.config.client-electron.js  vite.config.client-gh-pages.js  vite.config.client-native-apple.js  vite.config.client-native-web.js  vite.config.client-native.js  vite.config.client-tauri.js  vite.config.client.js  vite.config.electron-main.js  vite.config.electron-preload.js  vite.config.server.js
.codesandbox/: tasks.json
.github/workflows/: build-bosix.yml  build-client.yml  build-common.yml  build-desktop.yml  build-native.yml  build-server.yml  build-web.yml  codacy.yml  codeql.yml  deploy.yml  node.js.yml  qodana_code_quality.yml
.run/: build-client.run.xml  build-common.run.xml  build-server.run.xml  build-singleplayer.run.xml  update (server).run.xml  update.run.xml
.svelte-kit/: ambient.d.ts
assets/: basisTextureLoader-DdHJnU5K.js  client-I48C6lZC.js  client-YEiqgtyH.js  client-rdOJGiV_.js  client-toe_rWQO.js  client-txyHu49Q.js  client-vQS4twT2.js  ddsTextureLoader-N9Gj0D8E.js  envTextureLoader-AYBhMG6G.js  hdrTextureLoader-BVamYaIE.js  iesTextureLoader-Y8lFW43m.js  ktxTextureLoader-DXN7khhI.js  tgaTextureLoader-BSty7peH.js
client/: .gitignore  about.txt  characterController.ts  clientInputController.ts  entityClient.ts  gameClient.ts  gameClientNative.ts  gameClientNativeApple.ts  gameClientWeb.ts  index.html  main.ts  package-lock.json  package.json  playerInputController.ts  site.webmanifest  tsconfig.client.json  world.ts  worldClient.ts
clientlike/: package.json  tsconfig.client.json  tsconfig.singleplayer.json
common/: entity.ts  game.ts  inputController.ts  version.ts  world.ts
common/client/: entityClient.ts  worldClient.ts
common/common/: badge.ts  component.ts  entity.ts  game.ts  ground.ts  move.ts  version.ts  wall.ts  world.ts
common/server/: gameServerIntegrated.ts  worldServer.ts
css/: style.css
electron-main/: electronInit.ts
js/: main.js
lib/: glslang.d.ts  glslang.js  twgsl.d.ts
modules/bosix/: package-lock.json  package.json  tsconfig.json  vite.config.dedicatedServer.js  vite.config.js  vite.config.multiplayer.js
modules/common/: package-lock.json  package.json  tsconfig.json  vite.config.js
modules/native/: package-lock.json  package.json  vite.config.dedicatedServer.js  vite.config.js  vite.config.multiplayer.js
modules/native/rust-wrapper/: .gitignore  Cargo.toml
modules/native/rust-wrapper/src/: js_container.rs  main.rs
modules/native/rust-wrapper/src/assets/: site.webmanifest
modules/native/rust-wrapper/src/client-like/client/: integratedServerWorker.js  main.rs
modules/native/rust-wrapper/src/client-like/singleplayer/: main.rs
modules/native/rust-wrapper/src/dedicated_server/: main.rs
modules/node/: package-lock.json  package.json  tsconfig.json  vite.config.js
modules/web/: .gitignore  index-multiplayer-single-file.html  index-multiplayer.html  index-single-file.html  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.client-gh-pages.js  vite.config.gh-pages.integratedServer.js  vite.config.gh-pages.js  vite.config.integratedServer.js  vite.config.js  vite.config.multiplayer-gh-pages.js  vite.config.multiplayer-single-file.js  vite.config.multiplayer.integratedServer.js  vite.config.multiplayer.js  vite.config.mutiplayer-gh-pages.integratedServer.js  vite.config.single-file.integratedServer.js  vite.config.single-file.js
native/: .gitignore  CMakeLists.txt  README.md
native/Android/: build.gradle  gradle.properties
native/Android/app/: CMakeLists.txt
native/Android/app/src/main/: AndroidManifest.xml
native/Android/app/src/main/cpp/: BabylonNativeJNI.cpp
native/Android/app/src/main/java/io/github/codetoil/game3d/android/: Game3DActivity.java  Game3DView.java  Wrapper.java
native/Extensions/ChromeDevTools/: CMakeLists.txt
native/Extensions/ChromeDevTools/Include/Extensions/: ChromeDevTools.h
native/Extensions/ChromeDevTools/Source/: ChromeDevToolsJSI.cpp  ChromeDevToolsNull.cpp  ChromeDevToolsV8.cpp
native/Win32/: App.aps  App.cpp  App.h  App.rc  Resource.h  targetver.h
native/Win32-lib/: AppRuntime.lib  Console.lib  ExternalTexture.lib  GenericCodeGend.lib  JsRuntime.lib  NativeOptimizations.lib  NativeTracing.lib  OGLCompilerd.lib  OSDependentd.lib  ScriptLoader.lib  Window.lib  XMLHttpRequest.lib  arcana.lib  astc-encoder.lib  bx.lib  edtaa3.lib  etc1.lib  etc2.lib  glslang-default-resource-limitsd.lib  glslangd.lib  gtest_main.lib  iqa.lib  napi.lib  node.lib  nvtt.lib  pvrtc.lib  squish.lib  tinyexr.lib
native/Win32-lib/cmake/GTest/: GTestTargets.cmake
native/Win32-lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
native/Win32/Babylon/: AppRuntime.h  JsRuntime.h  ScriptLoader.h
native/Win32/Babylon/Graphics/: Device.h
native/Win32/Babylon/Plugins/: ExternalTexture.h  NativeCamera.h  NativeCapture.h  NativeEngine.h  NativeInput.h  NativeOptimizations.h  NativeTracing.h  NativeXr.h
native/Win32/Babylon/Polyfills/: Canvas.h  Console.h  Window.h  XMLHttpRequest.h
native/Win32/napi/: env.h  napi-inl.h  napi.h
native/iOS/: Info.plist  LibNativeBridge.h  LibNativeBridge.mm  ViewController.swift
native/macOS/: Info.plist  ViewController.mm
native/macOS/Base.lproj/: Main.storyboard
node/server/: gameDedicatedServer.ts
public/assets/: LICENSE  (+1 more)
server/: worldServer.ts
src/: index.test.ts  main.js
src-tauri/: Cargo.toml  tauri.conf.json
tauri/: Cargo.toml  tauri.conf.json
ts/: characterController.ts  custom_logger.ts  main.ts  playerInputController.ts  world.ts
ts1/: renderer.ts
(+114 files in other folders)
